--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -66,8 +66,9 @@
             <a class="active" href="/blog?sort=new">最新</a>
             <a href="/blog?sort=hot">最热</a>
         </div>
+        {{ range .Blogs }}
         <dl class="book-item">
-            <dt><a href="/blog?id=54">windows下设置Git 区分文件名大小写</a>
+            <dt><a href="/blog?id=54">{{ .Title }}</a>
                 <span class="book-time">2019-04-21</span></dt>
             <dd>
                 <p>windows下设置Git 区分文件名大小写</p>
@@ -80,292 +81,8 @@
                 <span class="click"><i class="fa fa-eye"></i><b>26</b></span>
             </dd>
         </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=53">字体反爬与反反爬</a>
-                <span class="book-time">2019-04-15</span></dt>
-            <dd>
-                <p></p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>24</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=52">Gulp 插件开发</a>
-                <span class="book-time">2019-04-05</span></dt>
-            <dd>
-                <p>Gulp 插件开发</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <a class="language" href="/blog?language=JavaScript"><i
-                        class="fa fa-code"></i><b>JavaScript</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>20</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=51">微信小程序自用框架开发</a>
-                <span class="book-time">2019-04-03</span></dt>
-            <dd>
-                <p>使用类似.vue 的语法文件开发原生小程序 </p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <a class="language" href="/blog?language=TypeScript"><i
-                        class="fa fa-code"></i><b>TypeScript</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>30</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=50">兴业银行支付PHP-SDK 踩坑</a>
-                <span class="book-time">2019-04-03</span></dt>
-            <dd>
-                <p>SDK支付过程中遇到的问题</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=1"><i
-                        class="fa fa-bookmark"></i><b>DEBUG问题集</b></a>
-                <a class="language" href="/blog?language=PHP"><i
-                        class="fa fa-code"></i><b>PHP</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>24</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=49">理解Redux</a>
-                <span class="book-time">2019-04-01</span></dt>
-            <dd>
-                <p></p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <a class="language" href="/blog?language=TypeScript"><i
-                        class="fa fa-code"></i><b>TypeScript</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>26</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=48">重新规划数据库读取</a>
-                <span class="book-time">2019-04-01</span></dt>
-            <dd>
-                <p></p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=2"><i
-                        class="fa fa-bookmark"></i><b>zodream框架</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>24</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=47">SVN Skipped '' -- Node remains in conflict</a>
-                <span class="book-time">2019-03-18</span></dt>
-            <dd>
-                <p>Node remains in conflict，svn在服务器上显示冲突</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=1"><i
-                        class="fa fa-bookmark"></i><b>DEBUG问题集</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>21</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=46">IIS劫持CORS preflight OPTIONS请求</a>
-                <span class="book-time">2019-03-15</span></dt>
-            <dd>
-                <p>IIS劫持CORS preflight OPTIONS请求</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=1"><i
-                        class="fa fa-bookmark"></i><b>DEBUG问题集</b></a>
-                <a class="language" href="/blog?language=PHP"><i
-                        class="fa fa-code"></i><b>PHP</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>26</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=45">vue 实现左滑删除</a>
-                <span class="book-time">2019-03-14</span></dt>
-            <dd>
-                <p>vue 实现左滑删除,右滑点赞，一个滑动其他的复原</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <a class="language" href="/blog?language=TypeScript"><i
-                        class="fa fa-code"></i><b>TypeScript</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>32</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=44">Vuex 使用心得</a>
-                <span class="book-time">2019-03-13</span></dt>
-            <dd>
-                <p>Vuex 使用心得，typescript版</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <a class="language" href="/blog?language=TypeScript"><i
-                        class="fa fa-code"></i><b>TypeScript</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>32</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=43">在“应用和功能”中重置了VS2017部署Debug版本UWP，应用消失后无法再部署、安装</a>
-                <span class="book-time">2019-02-18</span></dt>
-            <dd>
-                <p>应用程序注册失败。[0x80073CFB] 另一个用户已安装此应用的未打包版本。当前用户无法将该版本替换为打包版本。冲突程序包为</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=1"><i
-                        class="fa fa-bookmark"></i><b>DEBUG问题集</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>34</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=42">.NET Core 多模块</a>
-                <span class="book-time">2019-01-10</span></dt>
-            <dd>
-                <p>.NET Core 多模块,多区域的使用</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <a class="language" href="/blog?language=.NET+Core"><i
-                        class="fa fa-code"></i><b>.NET Core</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>1</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>84</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=41">.NetCore 中间件学习</a>
-                <span class="book-time">2019-01-10</span></dt>
-            <dd>
-                <p>.NetCore 中间件学习</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <a class="language" href="/blog?language=.NET+Core"><i
-                        class="fa fa-code"></i><b>.NET Core</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>71</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=40">隐藏 Apache、PHP 版本信息</a>
-                <span class="book-time">2019-01-08</span></dt>
-            <dd>
-                <p>隐藏 Apache、PHP 版本信息</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>93</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=39">wow.js 搭配 animate.css 实现网页动起来</a>
-                <span class="book-time">2019-01-05</span></dt>
-            <dd>
-                <p>wow.js 搭配 animate.css 实现网页动起来</p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <a class="language" href="/blog?language=JavaScript"><i
-                        class="fa fa-code"></i><b>JavaScript</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>122</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=38">ORM 关联查询设计</a>
-                <span class="book-time">2019-01-05</span></dt>
-            <dd>
-                <p></p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=2"><i
-                        class="fa fa-bookmark"></i><b>zodream框架</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>72</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=37">商城活动构思</a>
-                <span class="book-time">2019-01-05</span></dt>
-            <dd>
-                <p></p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>59</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=36">RBAC 权限管理（一）</a>
-                <span class="book-time">2019-01-04</span></dt>
-            <dd>
-                <p></p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=3"><i
-                        class="fa fa-bookmark"></i><b>技术</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>54</b></span>
-            </dd>
-        </dl>
-        <dl class="book-item">
-            <dt><a href="/blog?id=35">多语言网站思考</a>
-                <span class="book-time">2019-01-03</span></dt>
-            <dd>
-                <p></p>
-                <a class="author" href="/blog?user=1"><i
-                        class="fa fa-edit"></i><b>zodream</b></a>
-                <a class="category" href="/blog?category=2"><i
-                        class="fa fa-bookmark"></i><b>zodream框架</b></a>
-                <span class="comment"><i class="fa fa-comments"></i><b>0</b></span>
-                <span class="agree"><i class="fas fa-thumbs-up"></i><b>0</b></span>
-                <span class="click"><i class="fa fa-eye"></i><b>53</b></span>
-            </dd>
-        </dl>
+        {{ end }}
+       
     </div>
     <div class="book-footer">
         <ul class="book-pager">
